# rsoderh-compiler

./: Cargo.toml  LICENSE  README.md  grammar.txt
docs/: reference.md
examples/: fib.ship  simple.ship
src/: cli.rs  error.rs  lex.rs  lib.rs  main.rs  parse.rs  syntax.rs
src/lang/: instruction.rs  mod.rs  render.rs
src/lang/test/: mod.rs  simple_result.ssa  simple_source.ship
src/parse/: tests.rs
