[package]
name = "ship"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arc-slice = "0.1.0"
clap = { version = "4.5.48", features = ["derive"] }
itertools = "0.14.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tempfile = "3.23.0"

[dev-dependencies]
similar-asserts = "1.7.0"
